<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">背单词</string>
    <string name="action_settings">Settings</string>
    <string name="StudyBegin">开始学习</string>
    <string name="Title">天天背单词</string>
    <string name="WordsStudy">单词学习</string>
    <string name="tip">我的签名：</string>
    <string name="dailyDuty">今日任务:</string>
    <string name="Signature">背词不易，且行且珍惜~</string>
    <string name="wordsSum">单词总数</string>
    <string name="newWords">新词</string>
    <string name="review">复习</string>
    <string name="wordsNum">17</string>
    <string name="newWordsNum">11</string>
    <string name="reviewNum">6</string>
    <string name="NewWordsPace">新词进度</string>
    <string name="ReviewPace">复习进度</string>
    <string name="newPercent">0%</string>
    <string name="reviewPercent">0%</string>
    <string name="insert">插入</string>
    <string name="back2">返回</string>
    <string name="search">查询</string>
    <string name="detail">解释</string>
    <string name="testPhonetics">[\'kæptʃə(r)]</string>
    <string name="test">capture</string>
    <string name="explaination">v.捕获，俘获；夺取，占领</string>
    <string name="sentence">The whole town celebrated when two tanks were captured.</string>
    <string name="senExp">全体居民庆祝缴获了两辆坦克。</string>
    <string name="win">You Win!</string>
    <string name="lose">Sorry~ You lost!</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_fight">FightActivity</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="title_activity_lose">LoseActivity</string>

    <string name="title_activity_sava">SavaActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_my_database_helper">MyDatabaseHelper</string>
    <string name="title_activity_dict">Dict</string>


</resources>
