<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/studybegin_height"
        android:background="#58c5c7"
        android:text="@string/Title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/headImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:src="@drawable/teacher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tip" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/Signature"
                android:textColorHint="#006600" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/dailyDuty" />

    <!-- 今日任务 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/size"
        android:background="@drawable/bg_second_duty"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/wordsNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:text="@string/wordsNum"
                android:textSize="@dimen/NumSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/newWordsNum"
                android:textSize="@dimen/NumSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:text="@string/reviewNum"
                android:textSize="@dimen/NumSize" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/wordsSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/wordsSum" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/newWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/review" />
        </RelativeLayout>
    </LinearLayout>

    <!-- 新词进度 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/bg_second_duty"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size"
            android:layout_marginTop="@dimen/size"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ReviewPace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:text="@string/ReviewPace" />

            <TextView
                android:id="@+id/reviewPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:text="@string/reviewPercent" />
        </RelativeLayout>

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size"
            android:layout_marginLeft="@dimen/size"
            android:layout_marginRight="@dimen/size"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/NewWordsPace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:text="@string/NewWordsPace" />

            <TextView
                android:id="@+id/NewPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:text="@string/newPercent" />
        </RelativeLayout>

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/size"
            android:layout_marginRight="@dimen/size"
            android:visibility="visible" />
    </LinearLayout>

    <!-- 开始学习 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/studybegin_height"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/size"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/camera"
            android:layout_width="@dimen/studybegin_height"
            android:layout_height="fill_parent"
            android:background="@drawable/camera" />
        
        <Button
            android:id="@+id/StudyBegin"
            android:layout_width="150dp"
            android:layout_height="@dimen/studybegin_height"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@drawable/bg_alibuybutton"
            android:text="@string/StudyBegin" />

        <ImageButton
            android:id="@+id/microphone"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:background="@drawable/search" />
    </LinearLayout>

</LinearLayout>